--- a/src/style/style.css
+++ b/src/style/style.css
@@ -18,6 +18,13 @@ html{
     margin-left: auto;
     position: absolute;
     right: 1%;
+    transition: all 0.4s ease;
+}
+.imgNotiAnimation{
+    transform: rotate(0.06turn);
+}
+.imgNotiAnimation2{
+    transform: rotate(-0.06turn);
 }
 .imgNotic{
     width: 34px;
